nobase_static_DATA = \
	icons/back.png \
	icons/begin.png \
	icons/binary.png \
	icons/crosshairs.png \
	icons/down.png \
	icons/end.png \
	icons/favicon_sympa.png \
	icons/folder.open.png \
	icons/folder.png \
	icons/h.png \
	icons/image2.png \
	icons/junk.png \
	icons/left.png \
	icons/link.png \
	icons/locked.png \
	icons/logo-s-lock.png \
	icons/logo-s.png \
	icons/logo_sympa.png \
	icons/movie.png \
	icons/position.png \
	icons/right.png \
	icons/sound1.png \
	icons/sv.png \
	icons/text.png \
	icons/top.png \
	icons/unknown.png
	js/jqplot.barRenderer.min.js \
	js/jqplot.CanvasAxisTickRenderer.js \
	js/jqplot.CanvasTextRenderer.js \
	js/jqplot.categoryAxisRenderer.min.js \
	js/jquery.jqplot.css \
	js/jquery.jqplot.min.js \
	js/jquery.js \
	js/sympa.js

EXTRA_DIST = $(nobase_static_DATA)
